@@ -1,3 +1,8 @@
+2006-07-22  Bruno Haible  <bruno@clisp.org>
+
+	* error.m4: Update from gnulib.
+	* extensions.m4: Update from gnulib.
+
 2006-07-21  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.15 released.
