@@ -1,6 +1,7 @@
 2006-07-22  Bruno Haible  <bruno@clisp.org>
 
 	* fatal-signal.c: Include <config.h>, not "config.h".
+	* findprog.c: Likewise.
 
 	* c-strcasecmp.c: Update from gnulib. Don't assume that
 	UCHAR_MAX <= INT_MAX.
